updated email configs

--- a/Alicargo.Tests/App.config
+++ b/Alicargo.Tests/App.config
@@ -13,15 +13,15 @@
 		<add key="DefaultFrom" value="noreply@timez.org" />
 	</appSettings>
 	<connectionStrings>
-  <add name="Alicargo.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" providerName="System.Data.SqlClient" />
- </connectionStrings>
+		<add name="Alicargo.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 	<system.net>
 		<mailSettings>
 			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
 				<specifiedPickupDirectory pickupDirectoryLocation="D:\S\Projects\Alicargo\Alicargo\Mails" />
 			</smtp>
-			<!--<smtp deliveryMethod="Network" from="noreply@timez.org">
-				<network host="mail.timez.org" userName="noreply@timez.org" password="nvault#13" port="2525" />
+			<!--<smtp deliveryMethod="Network" from="robot@alicargo.ru">
+				<network host="smtp.gmail.com" enableSsl="true"	userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
 			</smtp>-->
 		</mailSettings>
 	</system.net>
@@ -47,18 +47,18 @@
 	</runtime>
 	<userSettings>
 		<Alicargo.Tests.Properties.Settings>
-   <setting name="BaseAddress" serializeAs="String">
-    <value>http://localhost:1893/</value>
-   </setting>
-   <setting name="Login" serializeAs="String">
-    <value>Admin</value>
-   </setting>
-   <setting name="Password" serializeAs="String">
-    <value>Admin</value>
-   </setting>
-   <setting name="MailsFolder" serializeAs="String">
-    <value>D:\S\Projects\Alicargo\Alicargo\Mails</value>
-   </setting>
-  </Alicargo.Tests.Properties.Settings>
+			<setting name="BaseAddress" serializeAs="String">
+				<value>http://localhost:1893/</value>
+			</setting>
+			<setting name="Login" serializeAs="String">
+				<value>Admin</value>
+			</setting>
+			<setting name="Password" serializeAs="String">
+				<value>Admin</value>
+			</setting>
+			<setting name="MailsFolder" serializeAs="String">
+				<value>D:\S\Projects\Alicargo\Alicargo\Mails</value>
+			</setting>
+		</Alicargo.Tests.Properties.Settings>
 	</userSettings>
 </configuration>
