--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -8,8 +8,8 @@
 	</connectionStrings>
 	<system.net>
 		<mailSettings xdt:Transform="Replace">
-			<smtp deliveryMethod="Network" from="noreply@timez.org">
-				<network host="mail.timez.org" userName="noreply@timez.org" password="nvault#13" port="2525" />
+			<smtp deliveryMethod="Network" from="robot@alicargo.ru">
+				<network host="smtp.gmail.com" enableSsl="true"	userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
 			</smtp>
 		</mailSettings>
 	</system.net>
