--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -26,9 +26,9 @@
 			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
 				<specifiedPickupDirectory pickupDirectoryLocation="D:\S\Projects\Alicargo\Alicargo\Mails"/>
 			</smtp>
-			<!--<smtp deliveryMethod="Network" from="noreply@timez.org">
-        <network host="mail.timez.org" userName="noreply@timez.org" password="nvault#13" port="2525" />
-      </smtp>-->
+			<!--<smtp deliveryMethod="Network" from="robot@alicargo.ru">
+				<network host="smtp.gmail.com" enableSsl="true"	userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
+			</smtp>-->
 		</mailSettings>
 	</system.net>
 	<system.web>
