fix file download

--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -883,7 +883,7 @@
     <Content Include="Views\Client\Edit.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Client.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Transit.cshtml" />
-    <None Include="Properties\PublishProfiles\alicargo-file.pubxml" />
+    <None Include="Properties\PublishProfiles\Alicargo.Release.pubxml" />
     <Content Include="Scripts\jquery-2.0.2.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
