--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -1,10 +1,7 @@
 ﻿<?xml version="1.0"?>
-
-
-<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-
+	<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<connectionStrings>
-		<add  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString" connectionString="Data Source=db203.my-hosting-panel.com;Initial Catalog=galyamov_alicargo_dev;Persist Security Info=True;User ID=galyamov_alicargo;Password=a1icargo" providerName="System.Data.SqlClient" />
+		<add  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.net>
 		<mailSettings xdt:Transform="Replace">
