--- a/Alicargo.Tests/packages.config
+++ b/Alicargo.Tests/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoFixture" version="3.5.0" targetFramework="net45" />
-  <package id="AutoFixture.AutoMoq" version="3.5.0" targetFramework="net45" />
-  <package id="CompareNETObjects" version="1.7.2.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
