--- a/Alicargo.DataAccess.Tests/App.config
+++ b/Alicargo.DataAccess.Tests/App.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<connectionStrings>
-		<add connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" name="MainConnectionString" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+	<configSections>
+ </configSections>
+ <connectionStrings>
+  <add name="MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+  <add name="Alicargo.DataAccess.Tests.Properties.Settings.MainConnectionString"
+   connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" />
+ </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
