--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Alicargo.Core.BlackBox.Tests\packages.config" />
   <repository path="..\Alicargo.Core.Tests\packages.config" />
   <repository path="..\Alicargo.DataAccess.Tests\packages.config" />
   <repository path="..\Alicargo.DataAccess\packages.config" />
+  <repository path="..\Alicargo.TestHelpers\packages.config" />
   <repository path="..\Alicargo.Tests\packages.config" />
   <repository path="..\Alicargo\packages.config" />
 </repositories>
