--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -518,6 +518,7 @@
     <Content Include="App_Code\Helpers.cshtml" />
     <Content Include="Install\backup-db.ps1" />
     <Content Include="Install\init-db.ps1" />
+    <Content Include="Install\backup-db-alicargo.ps1" />
     <None Include="Scripts\jquery-2.0.2.intellisense.js" />
     <Content Include="Scripts\jquery-2.0.2.js" />
     <Content Include="Scripts\jquery-2.0.2.min.js" />
@@ -1297,9 +1298,12 @@
     <Content Include="Views\Application\Index.cshtml" />
     <Content Include="Views\Application\Create.cshtml" />
     <None Include="T4MVC.tt.settings.xml" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
