--- a/Alicargo.Tests/App.config
+++ b/Alicargo.Tests/App.config
@@ -11,10 +11,17 @@
 	</configSections>
 	<appSettings>
 		<add key="DefaultFrom" value="noreply@timez.org" />
+		<add key="StateId-Default" value="1" />
+		<add key="StateId-CargoInStock" value="6" />
+		<add key="StateId-CargoIsFlew" value="7" />
+		<add key="StateId-CargoAtCustoms" value="8" />
+		<add key="StateId-CargoIsCustomsCleared" value="9" />
+		<add key="StateId-CargoReceived" value="11" />
+		<add key="StateId-CargoOnTransit" value="12" />
 	</appSettings>
 	<connectionStrings>
-		<add name="Alicargo.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <add name="Alicargo.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True;Application Name=Alicargo.Tests" providerName="System.Data.SqlClient" />
+ </connectionStrings>
 	<system.net>
 		<mailSettings>
 			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
@@ -24,41 +31,37 @@
 				<network host="smtp.gmail.com" enableSsl="true"	userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
 			</smtp>-->
 		</mailSettings>
-	</system.net>
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.0.10827.0" newVersion="4.0.10827.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
+	</system.net>	
 	<userSettings>
 		<Alicargo.Tests.Properties.Settings>
-			<setting name="BaseAddress" serializeAs="String">
-				<value>http://localhost:1893/</value>
-			</setting>
-			<setting name="Login" serializeAs="String">
-				<value>Admin</value>
-			</setting>
-			<setting name="Password" serializeAs="String">
-				<value>Admin</value>
-			</setting>
-			<setting name="MailsFolder" serializeAs="String">
-				<value>D:\S\Projects\Alicargo\Alicargo\Mails</value>
-			</setting>
-		</Alicargo.Tests.Properties.Settings>
+   <setting name="BaseAddress" serializeAs="String">
+    <value>http://localhost:1893/</value>
+   </setting>
+   <setting name="Login" serializeAs="String">
+    <value>Admin</value>
+   </setting>
+   <setting name="Password" serializeAs="String">
+    <value>Admin</value>
+   </setting>
+   <setting name="MailsFolder" serializeAs="String">
+    <value>D:\S\Projects\Alicargo\Alicargo\Mails</value>
+   </setting>
+  </Alicargo.Tests.Properties.Settings>
 	</userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.10827.0" newVersion="4.0.10827.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
