--- a/Alicargo.TestHelpers/packages.config
+++ b/Alicargo.TestHelpers/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="AutoFixture" version="3.6.5" targetFramework="net45" />
   <package id="AutoFixture.AutoMoq" version="3.6.5" targetFramework="net45" />
+  <package id="FluentAssertions" version="2.0.1" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
 </packages>
