--- a/Alicargo.Tests/Alicargo.Tests.csproj
+++ b/Alicargo.Tests/Alicargo.Tests.csproj
@@ -135,6 +135,10 @@
       <Project>{37068536-3066-4877-91e0-05031d2c5ca3}</Project>
       <Name>Alicargo.DataAccess</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Alicargo.TestHelpers\Alicargo.TestHelpers.csproj">
+      <Project>{BB7C7B4A-D181-4812-89BC-29EB406E9656}</Project>
+      <Name>Alicargo.TestHelpers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Alicargo\Alicargo.csproj">
       <Project>{8666B402-84B6-49D4-ABD7-B2966955C9CB}</Project>
       <Name>Alicargo</Name>
