--- a/Alicargo.Tests/Properties/Settings.settings
+++ b/Alicargo.Tests/Properties/Settings.settings
@@ -14,10 +14,10 @@
     <Setting Name="MainConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True;Application Name=Alicargo.Tests&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True;Application Name=Alicargo.Tests</Value>
     </Setting>
     <Setting Name="MailsFolder" Type="System.String" Scope="User">
       <Value Profile="(Default)">D:\S\Projects\Alicargo\Alicargo\Mails</Value>
