--- a/packages/AutoFixture.3.6.5/AutoFixture.3.6.5.nuspec
+++ b/packages/AutoFixture.3.6.5/AutoFixture.3.6.5.nuspec
@@ -11,6 +11,8 @@
     <iconUrl>http://i3.codeplex.com/Download?ProjectName=autofixture&amp;DownloadId=278049</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>AutoFixture makes it easier for developers to do Test-Driven Development by automating non-relevant Test Fixture Setup, allowing the Test Developer to focus on the essentials of each test case.</description>
+    <releaseNotes />
+    <copyright />
     <language>en-US</language>
   </metadata>
 </package>
