created Alicargo.Contracts project

--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -96,6 +96,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Alicargo.Contracts\Alicargo.Contracts.csproj">
+      <Project>{e2f1a146-9076-4833-995e-084ac1b3eac7}</Project>
+      <Name>Alicargo.Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Alicargo.Core\Alicargo.Core.csproj">
       <Project>{577b60f9-32f7-4117-97da-40743bff4ca0}</Project>
       <Name>Alicargo.Core</Name>
