transit get test

--- a/Alicargo.Tests/App.config
+++ b/Alicargo.Tests/App.config
@@ -20,7 +20,9 @@
 		<add key="StateId-CargoOnTransit" value="12" />
 	</appSettings>
 	<connectionStrings>
-  <add name="Alicargo.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True;Application Name=Alicargo.Tests" providerName="System.Data.SqlClient" />
+  <add name="Alicargo.Tests.Properties.Settings.MainConnectionString"
+   connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True;Application Name=Alicargo.Tests"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
 	<system.net>
 		<mailSettings>
@@ -37,14 +39,20 @@
    <setting name="BaseAddress" serializeAs="String">
     <value>http://localhost:1893/</value>
    </setting>
-   <setting name="Login" serializeAs="String">
+   <setting name="AdminLogin" serializeAs="String">
     <value>Admin</value>
    </setting>
-   <setting name="Password" serializeAs="String">
+   <setting name="AdminPassword" serializeAs="String">
     <value>Admin</value>
    </setting>
    <setting name="MailsFolder" serializeAs="String">
     <value>D:\S\Projects\Alicargo\Alicargo\Mails</value>
+   </setting>
+   <setting name="ClientLogin" serializeAs="String">
+    <value>c1</value>
+   </setting>
+   <setting name="ClientPassword" serializeAs="String">
+    <value>c1</value>
    </setting>
   </Alicargo.Tests.Properties.Settings>
 	</userSettings>
