--- a/Alicargo.Tests/Alicargo.Tests.csproj
+++ b/Alicargo.Tests/Alicargo.Tests.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Controllers\ApplicationControllerTests.cs" />
     <Compile Include="Controllers\ReferenceControllerTests.cs" />
     <Compile Include="Controllers\ClientControllerTests.cs" />
+    <Compile Include="Controllers\TransitControllerTests.cs" />
     <Compile Include="DummyTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
