--- a/Alicargo.Core/Alicargo.Core.csproj
+++ b/Alicargo.Core/Alicargo.Core.csproj
@@ -43,7 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\ApplicationData.cs" />
     <Compile Include="Contracts\AuthenticationData.cs" />
     <Compile Include="Contracts\ClientData.cs" />
     <Compile Include="Contracts\CountryData.cs" />
@@ -162,6 +161,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Alicargo.Contracts\Alicargo.Contracts.csproj">
+      <Project>{e2f1a146-9076-4833-995e-084ac1b3eac7}</Project>
+      <Name>Alicargo.Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
