--- a/Alicargo.DataAccess.Tests/Alicargo.DataAccess.Tests.csproj
+++ b/Alicargo.DataAccess.Tests/Alicargo.DataAccess.Tests.csproj
@@ -89,6 +89,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Alicargo.Contracts\Alicargo.Contracts.csproj">
+      <Project>{e2f1a146-9076-4833-995e-084ac1b3eac7}</Project>
+      <Name>Alicargo.Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Alicargo.Core\Alicargo.Core.csproj">
       <Project>{577B60F9-32F7-4117-97DA-40743BFF4CA0}</Project>
       <Name>Alicargo.Core</Name>
