--- a/Alicargo/Views/Web.config
+++ b/Alicargo/Views/Web.config
@@ -18,7 +18,9 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization"/>
 				<add namespace="Alicargo.ViewModels"/>
+				<add namespace="Alicargo.ViewModels.Application"/>
 				<add namespace="Alicargo.Core.Models"/>
+				<add namespace="Alicargo.Core.Enums"/>
 				<add namespace="Alicargo.Helpers"/>
       </namespaces>
     </pages>
