refactored Application repository

--- a/Alicargo.Contracts/Alicargo.Contracts.csproj
+++ b/Alicargo.Contracts/Alicargo.Contracts.csproj
@@ -36,6 +36,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\ApplicationData.cs" />
+    <Compile Include="Helpers\ApplicationFilter.cs" />
+    <Compile Include="Helpers\Order.cs" />
+    <Compile Include="Helpers\OrderType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
