--- a/Alicargo.DataAccess.Tests/Alicargo.DataAccess.Tests.csproj
+++ b/Alicargo.DataAccess.Tests/Alicargo.DataAccess.Tests.csproj
@@ -74,7 +74,7 @@
     <Compile Include="Helpers\ApplicationHelperTests.cs" />
     <Compile Include="Helpers\ApplicationRepositoryOrdererTests.cs" />
     <Compile Include="Repositories\Tests.StateRepository.cs" />
-    <Compile Include="Repositories\Tests.ReferenceRepository.cs" />
+    <Compile Include="Repositories\Tests.AirWaybillRepository.cs" />
     <Compile Include="Repositories\Tests.BrockerRepository.cs" />
     <Compile Include="Repositories\Tests.CarrierRepository.cs" />
     <Compile Include="Repositories\Tests.ClientRepository.cs" />
