--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -71,7 +71,7 @@
     <Compile Include="Helpers\ApplicationRepositoryOrderer.cs" />
     <Compile Include="Helpers\FileDataHelper.cs" />
     <Compile Include="Helpers\IApplicationRepositoryOrderer.cs" />
-    <Compile Include="Helpers\ReferenceDataHelper.cs" />
+    <Compile Include="Helpers\AirWaybillDataHelper.cs" />
     <Compile Include="Helpers\TransitDataHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\ApplicationDataHelper.cs" />
@@ -82,7 +82,7 @@
     <Compile Include="Repositories\CarrierRepository.cs" />
     <Compile Include="Repositories\ClientRepository.cs" />
     <Compile Include="Repositories\CountryRepository.cs" />
-    <Compile Include="Repositories\ReferenceRepository.cs" />
+    <Compile Include="Repositories\AirWaybillRepository.cs" />
     <Compile Include="Repositories\StateRepository.cs" />
     <Compile Include="Repositories\TransitRepository.cs" />
     <Compile Include="Repositories\AuthenticationRepository.cs" />
